[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://parede.png" type="Texture" id=3]
[ext_resource path="res://poder.tscn" type="PackedScene" id=4]
[ext_resource path="res://mundo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Personagem.tscn" type="PackedScene" id=6]
[ext_resource path="res://Inimigo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mini.tscn" type="PackedScene" id=8]
[ext_resource path="res://ItemPoder.tscn" type="PackedScene" id=9]
[ext_resource path="res://item.tscn" type="PackedScene" id=10]
[ext_resource path="res://Cenário.tscn" type="PackedScene" id=11]

[node name="World" type="Node2D"]
position = Vector2( 17.7042, -407.196 )
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="parede" type="Sprite" parent="."]
position = Vector2( 3359.55, 727.28 )
scale = Vector2( 12.248, 2.81 )
texture = ExtResource( 3 )

[node name="poder" parent="." instance=ExtResource( 4 )]
position = Vector2( 585.647, 464.156 )
z_index = 5

[node name="Cenário" parent="." instance=ExtResource( 5 )]

[node name="Personagem" parent="." instance=ExtResource( 6 )]
position = Vector2( -272.561, 634.586 )
z_index = 3

[node name="Inimigo" parent="." instance=ExtResource( 7 )]
position = Vector2( 6120.86, 591.692 )

[node name="Mini" parent="." instance=ExtResource( 8 )]
position = Vector2( 1977.27, 596.621 )

[node name="Mini2" parent="." instance=ExtResource( 8 )]
position = Vector2( 3649.86, 606.945 )

[node name="Itens" type="Node2D" parent="."]
position = Vector2( 400.714, 236.697 )
z_index = 6

[node name="ItemPoder" parent="Itens" instance=ExtResource( 9 )]
position = Vector2( 5171.11, 438.447 )

[node name="ItemPoder2" parent="Itens" instance=ExtResource( 9 )]
position = Vector2( 4472.31, 420.919 )

[node name="Item" parent="Itens" instance=ExtResource( 10 )]
position = Vector2( 1929.61, 331.787 )

[node name="Item2" parent="Itens" instance=ExtResource( 10 )]
position = Vector2( 3076.32, 358.612 )

[node name="Item3" parent="Itens" instance=ExtResource( 10 )]
position = Vector2( 4072.8, 154.684 )

[node name="Item4" parent="Itens" instance=ExtResource( 10 )]
position = Vector2( 5850.72, 231.782 )

[node name="Cenário2" parent="." instance=ExtResource( 11 )]
position = Vector2( -387.173, -5.45883 )
